# duckvep

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  LICENSE  Makefile  NEWS.md  PATCHES.md  README.Rmd  README.md  STDOUT_warnings.txt
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: MainDistributionPipeline.yml
benchmarks/: README.md  results.Rmd  results.html  results.md
benchmarks/data/: footprint.csv  throughput.csv  timings.csv
conformance/: README.md  extract_so_spec.pl  fuzz_witnesses.R  generate_witnesses.R  stratified_conformance.R  stratified_conformance.py
conformance/data/: so_consequences.tsv  stratified_conformance.csv
correctness/: concordance.R  concordance.sh  correctness.Rmd  correctness.md  frontier_check.R  gen-regression-cases.R  gen-regression-cases.sh  gen_hard_variants.R  haplotype_concordance.R  haplotype_concordance.sh  sv_concordance.R  sv_concordance.sh  vep_concordance.R  vep_concordance.py
correctness/cache-build/: README.Rmd  README.md  build-cache.R  build-cache.sh
correctness/cache-build/data/: cache_build_meta.txt  cache_stats.csv
correctness/data/: concordance_by_impact.csv  conformance_history.csv  discordance_by_consequence.csv  error_transitions.csv  frontier_duckvep_specific.vcf  methodology_audit.csv  so_term_transitions.csv
data/vep_dumps/: concordance_log.csv  concordance_log.invalid-join.csv  concordance_log.v1-by-class.csv
docs/: DESIGN.md  PATCHES.md  kernel-algorithm.md  refinements.md
examples/: codon_bench.rs  sweep_classify.rs  sweep_multi.rs  sweep_parallel.rs  sweep_scale.rs  tile_sweep.rs
scripts/: bench-threads.R  bench-threads.sh  bench.R  bench.sh  benchmark.R  benchmark.sh  concordance.sh  duckdb-unsigned  duckhts_integration_demo.R  duckhts_integration_demo.sh  ensembl-sync.sql  ensembl-transcripts.sql  fetch-data.R  fetch-data.sh  fetch-giab.sh  gen_hard_variants.R  render-benchmarks.R  render-correctness.R  render-readme.R  vep_concordance.py
scripts/cache-build/: README.md  assemble.sql  build-cache.sh
sql/: vep.sql
src/: lib.rs  vec_util.rs
src/io/: gff.rs  mod.rs  vcf.rs
src/vep/: annotate.rs  cdsseq.rs  consequence.rs  engine.rs  exons.rs  mod.rs  normalize.rs  tcache.rs  transcripts.rs
test/: run-regression-cases.R  run-regression-cases.sh
test/data/: ms.vcf  regression_cases.tsv  sites.vcf  sv.vcf  svlen.vcf  test.gff3  test.gff3.fastvep.cache  test.gff3.gz.tbi  test.gff3.transcripts.parquet
test/sql/: gff_import.test  read_vcf.test  vep_annotate.test  vep_consequence.test  vep_splice.test
tools/: Cargo.toml
tools/src/: gen_hard_variants.rs
