[package]
name = "duckvep"
version = "0.3.0"
edition = "2021"
description = "DuckDB-native VEP: SQL genomics readers, VEP UDFs, Parquet sources"
# duckvep itself is GPL-2.0-or-later. The vendored fastVEP crates under vendor/
# remain Apache-2.0 (their workspace.package license, below) — Apache-2.0 is
# compatible with GPL >= 2 via the "or later" (GPLv3) option. See PATCHES.md.
license = "GPL-2.0-or-later"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[[example]]
# crate-type can't be (at the moment) be overriden for specific targets
# src/wasm_lib.rs forwards to src/lib.rs so that we can change from cdylib
# (that is needed while compiling natively) to staticlib (needed since the
# actual linking will be done via emcc
name = "duckvep"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
duckdb = { version = "~1.10503.1", features = ["loadable-extension", "vtab", "vscalar"] }
noodles = { version = "0.87", features = ["vcf", "bgzf", "core"] }
flate2 = "1"

# Vendored fastVEP compute engine (Apache-2.0, from Huang-lab/fastVEP @ 785922e).
# Hard-copied (not a dep) so we can adapt suboptimal-for-us decisions: we depend
# only on the lean consequence closure and route around `fastvep-annotate`/`-sa`.
# See DESIGN.md §6 (wrap-then-delete) and vendor/NOTICE.
fastvep-core = { path = "vendor/fastvep-core" }
fastvep-genome = { path = "vendor/fastvep-genome" }
fastvep-cache = { path = "vendor/fastvep-cache" }
fastvep-consequence = { path = "vendor/fastvep-consequence" }
fastvep-hgvs = { path = "vendor/fastvep-hgvs" }
arc-swap = "1.9.1"
serde_json.workspace = true
arrow = "58"
parquet = { version = "58", default-features = false, features = ["arrow", "zstd"] }

# Workspace so the vendored crates resolve their `workspace = true` keys here.
[workspace]
members = [
    "tools",
    "vendor/fastvep-core",
    "vendor/fastvep-genome",
    "vendor/fastvep-cache",
    "vendor/fastvep-consequence",
    "vendor/fastvep-hgvs",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Vendored fastVEP crate (Apache-2.0, Huang-lab/fastVEP)"

[workspace.dependencies]
# Internal (vendored)
fastvep-core = { path = "vendor/fastvep-core" }
fastvep-genome = { path = "vendor/fastvep-genome" }
fastvep-cache = { path = "vendor/fastvep-cache" }
fastvep-consequence = { path = "vendor/fastvep-consequence" }
fastvep-hgvs = { path = "vendor/fastvep-hgvs" }
# External (mirrors upstream workspace.dependencies)
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
rayon = "1.10"
flate2 = "1"
memmap2 = "0.9"
log = "0.4"
noodles-bgzf = "0.46"
noodles-core = "0.19"
noodles-tabix = "0.61"
noodles-csi = "0.55"
bincode = "1"
zstd = "0.13"
lru = "0.12"
tempfile = "3"
